# payments-engine

./: Cargo.toml  README.md
src/: domain.rs  engine.rs  errors.rs  main.rs  transaction_reader.rs
src/account_writer/: writer.rs
src/domain/: account.rs  stored_transaction.rs  transaction_command.rs
src/transaction_reader/: raw_transaction.rs  reader.rs
tests/: integration.rs
tests/data/: chargeback_in.csv  dispute_in.csv  garbage_in.csv  resolve_in.csv
