[package]
name = "payments-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
